--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -11,7 +11,8 @@
         <h2 class="text-2xl font-bold text-center text-gray-700">Sign in to your account</h2>
         
                 
-                <form id = loginForm action="/api/auth/login" method="POST" class="mt-4">
+         <form id="loginForm" action="/api/auth/login" method="POST">
+
                    
                     <div class="mt-4">
                         <label class="block text-gray-600">Email</label>
@@ -33,6 +34,6 @@
             <a href="/api/auth/register" class="text-blue-500 hover:underline">Register</a>
         </p>
     </div>
-    
+    <script src="/login_script.js"></script>
 </body>
 </html>
